--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -6,7 +6,7 @@
 
 <h1>Les produits</h1>
   <% @products.each do |product| %>
-  <li class="list-group-item"><%= "#{product.name.capitalize} #{product.age}"%></li>
+  <li class="list-group-item"><%= "#{product.name.capitalize} #{product.age} ans"%></li>
   <% end %>
 
 </ul>
